base/production/hello-world-grpc-service/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-grpc-service
spec:
  template:
    spec:
      nodeSelector:
        agentpool: prodpoolv1
      tolerations:
        - key: workload
          operator: Equal
          value: production
          effect: NoSchedule
