base/production/hello-world-grpc-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-grpc-service
  namespace: production
spec:
  clusterIP: None
  selector:
    app: hello-world-grpc-service
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: http-web
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: grpc
