base/production/hello-world-grpc-service/ingress-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-grpc-service-vpn-web
  namespace: production
spec:
  entryPoints:
    - web-vpn
  routes:
    - match: Host(`hello-world-grpc-service.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: hello-world-grpc-service
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-grpc-service-vpn-websecure
  namespace: production
spec:
  entryPoints:
    - websecure-vpn
  routes:
    - match: Host(`hello-world-grpc-service.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: hello-world-grpc-service
          port: 80
  tls:
    secretName: production-hello-world-grpc-service-vpn-tls
---
# production grpc services should not be called by local machines
# apiVersion: traefik.io/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: hello-world-grpc-service-vpn-grpc
#   namespace: production
# spec:
#   entryPoints:
#     - vpn-grpc
#   routes:
#     - match: HostSNI(`hello-world-grpc-service.vpn.patinanetwork.org`)
#       services:
#         - name: hello-world-grpc-service
#           port: 50051
#   tls:
#     secretName: production-hello-world-grpc-service-vpn-tls
